# conar

./: .changelogen.json  .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  .oxlintrc.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  api.Dockerfile  bunfig.toml  docker-compose.dev.yml  eslint.config.mjs  eslint.config.ts  lefthook.yml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.ts  tsconfig.json  turbo.json  turbo.jsonc  vitest.config.ts
.claude/: launch.json
.github/: FUNDING.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
.zed/: settings.json
api/: package.json  tsconfig.json
app/: .env.example  components.json  core.ts  dev-app-update.yml  electron-builder.yml  env.ts  index.html  next.config.ts  package-lock.json  package.json  stronghold.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
apps/_desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/_desktop/src-tauri/capabilities/: default.json
apps/_desktop/src-tauri/src/: lib.rs
aur/: .SRCINFO  PKGBUILD  README.md
desktop/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json
docs/: AGENTS.md  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
patches/: @better-auth__api-key.patch  @better-auth__core.patch  @better-auth__kysely-adapter@1.7.0-beta.9.patch  @trpc__react-query.patch  app-builder-lib.patch  cmdk@1.1.1.md  cmdk@1.1.1.patch
scripts/: fix-pnpm-tarball-integrity.ts  (+4 more)
(+2355 files in other folders)
